# ng2040

./: .gitignore  LICENSE  README.md
arduino/: rf24_ng_controller.ino
rp2040/nrf24joystick/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  nrf24joystick.cpp  nrf24joystick.uf2
rp2040/nrf24joystick/elf2uf2/: Makefile  elf2uf2
rp2040/nrf24joystick/elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
rp2040/nrf24joystick/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
rp2040/nrf24joystick/pico-sdk/: Makefile  cmake_install.cmake
rp2040/nrf24joystick/pico-sdk/docs/: Makefile
rp2040/nrf24joystick/pico-sdk/src/common/: Makefile
rp2040/nrf24joystick/pico-sdk/src/common/boot_picoboot/: Makefile
rp2040/nrf24joystick/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
rp2040/nrf24joystick/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
rp2040/nrf24joystick/pico-sdk/src/common/pico_bit_ops/: Makefile
rp2040/nrf24joystick/pico-sdk/src/common/pico_divider/: Makefile
rp2040/nrf24joystick/pico-sdk/src/common/pico_sync/: cmake_install.cmake
rp2040/nrf24joystick/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
rp2040/nrf24joystick/pico-sdk/src/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
rp2040/nrf24joystick/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
rp2040/nrf24joystick/pico-sdk/src/rp2_common/: cmake_install.cmake
rp2040/nrf24joystick/pico-sdk/tools/: Makefile
rp2040/nrf24joystick/pico_extras/: Makefile
rp2040/nrf24joystick/pico_extras/src/: cmake_install.cmake
rp2040/nrf24joystick/pico_extras/src/common/: cmake_install.cmake
rp2040/nrf24joystick/pioasm/: cmake_install.cmake
(+268 files in other folders)
